grammar.output
Terminals unused in grammar

   END_OF_FILE
   BREAK
   CLASS
   CONTINUE
   DEBUGGER
   DELETE
   EXPORT
   EXTENDS
   FUNCTION
   IMPORT
   INSTANCEOF
   NEW
   RETURN
   THROW
   TYPEOF
   VOID
   WITH
   ENUM
   AWAIT
   IMPLEMENTS
   INTERFACE
   PACKAGE
   PRIVATE
   PROTECTED
   PUBLIC
   LITERAL_UNDEFINED
   LITERAL_NAN
   UNARY_ADD
   UNARY_SUBTRACT
   LOGICAL_NOT
   MULTIPLY
   DIVIDE
   MODULO
   ADD
   SUBTRACT
   EQUAL
   NOT_EQUAL
   EXACTLY_EQUAL
   NOT_EXACTLY_EQUAL
   LEFT_SHIFT
   SIGNED_RIGHT_SHIFT
   UNSIGNED_RIGHT_SHIFT
   LESS_THAN
   GREATER_THAN
   LESS_THAN_OR_EQUAL
   GREATER_THAN_OR_EQUAL
   QUESTION_MARK
   LOGICAL_AND
   LOGICAL_OR
   BITWISE_AND
   BITWISE_OR
   BITWISE_XOR
   BITWISE_NOT
   EXPONENTIATION_ASSIGNMENT
   ELLIPSIS
   DOUBLE_QUOTE
   SINGLE_QUOTE


State 51 conflicts: 4 reduce/reduce
State 60 conflicts: 4 reduce/reduce
State 110 conflicts: 2 reduce/reduce


Grammar

    0 $accept: Script $end

    1 Script: ScriptBody

    2 ScriptBody: StatementList

    3 StatementList: StatementListItem
    4              | StatementList StatementListItem

    5 StatementListOptional: StatementList
    6                      | %empty

    7 StatementListItem: Statement
    8                  | Declaration

    9 Declaration: "temp"

   10 Statement: BlockStatement
   11          | VariableStatement
   12          | EmptyStatement
   13          | ExpressionStatement
   14          | IfStatement
   15          | BreakableStatement
   16          | TryStatement

   17 BlockStatement: Block

   18 Block: LEFT_BRACE StatementList RIGHT_BRACE
   19      | LEFT_BRACE RIGHT_BRACE

   20 VariableStatement: VAR VariableDeclarationList

   21 VariableDeclarationList: VariableDeclaration
   22                        | VariableDeclarationList COMMA VariableDeclaration

   23 VariableDeclaration: IDENTIFIER Initialiser

   24 Initialiser: ASSIGNMENT VALUE_INTEGER
   25            | ASSIGNMENT VALUE_FLOAT
   26            | ASSIGNMENT VALUE_STRING

   27 EmptyStatement: SEMICOLON

   28 ExpressionStatement: Expression SEMICOLON

   29 IfStatement: IF LEFT_PAREN Expression RIGHT_PAREN Statement
   30            | IF LEFT_PAREN Expression RIGHT_PAREN Statement ELSE Statement

   31 BreakableStatement: IterationStatement
   32                   | SwitchStatement

   33 IterationStatement: DO Statement WHILE LEFT_PAREN Expression RIGHT_PAREN SEMICOLON
   34                   | WHILE LEFT_PAREN Expression RIGHT_PAREN Statement
   35                   | FOR LEFT_PAREN ExpressionOptional SEMICOLON ExpressionOptional SEMICOLON ExpressionOptional RIGHT_PAREN Statement
   36                   | FOR LEFT_PAREN VAR VariableDeclarationList SEMICOLON ExpressionOptional SEMICOLON ExpressionOptional RIGHT_PAREN Statement
   37                   | FOR LEFT_PAREN LexicalDeclaration ExpressionOptional SEMICOLON ExpressionOptional RIGHT_PAREN Statement
   38                   | FOR LEFT_PAREN LeftHandSideExpression IN Expression RIGHT_PAREN Statement
   39                   | FOR LEFT_PAREN VAR ForBinding IN Expression RIGHT_PAREN Statement
   40                   | FOR LEFT_PAREN ForDeclaration IN Expression RIGHT_PAREN Statement
   41                   | FOR LEFT_PAREN LeftHandSideExpression OF AssignmentExpression RIGHT_PAREN Statement
   42                   | FOR LEFT_PAREN VAR ForBinding OF AssignmentExpression RIGHT_PAREN Statement
   43                   | FOR LEFT_PAREN ForDeclaration OF AssignmentExpression RIGHT_PAREN Statement

   44 ExpressionOptional: Expression
   45                   | %empty

   46 LexicalDeclaration: LetOrConst

   47 ForDeclaration: LetOrConst
   48               | ForBinding

   49 ForBinding: IDENTIFIER

   50 LetOrConst: LET
   51           | CONST

   52 SwitchStatement: SWITCH LEFT_PAREN Expression RIGHT_PAREN CaseBlock

   53 CaseBlock: LEFT_BRACE CaseClausesOptional RIGHT_BRACE
   54          | LEFT_BRACE CaseClausesOptional DefaultClause CaseClausesOptional RIGHT_BRACE

   55 CaseClauses: CaseClause
   56            | CaseClauses CaseClause

   57 CaseClausesOptional: CaseClauses
   58                    | %empty

   59 CaseClause: CASE Expression COLON StatementListOptional

   60 DefaultClause: DEFAULT COLON StatementListOptional

   61 Expression: AssignmentExpression
   62           | PrimaryExpression
   63           | EqualityExpression

   64 Literal: NullLiteral
   65        | BooleanLiteral
   66        | NumericLiteral
   67        | StringLiteral

   68 NullLiteral: LITERAL_NULL

   69 BooleanLiteral: LITERAL_TRUE
   70               | LITERAL_FALSE

   71 NumericLiteral: DecimalLiteral

   72 DecimalLiteral: DecimalIntegerLiteral

   73 DecimalIntegerLiteral: VALUE_INTEGER

   74 StringLiteral: VALUE_STRING

   75 AssignmentExpression: ConditionalExpression
   76                     | YieldExpression
   77                     | ArrowFunction
   78                     | LeftHandSideExpression ASSIGNMENT AssignmentExpression
   79                     | LeftHandSideExpression AssignmentOperator AssignmentExpression

   80 ConditionalExpression: LogicalORExpression

   81 LogicalORExpression: LogicalANDExpression

   82 LogicalANDExpression: BitwiseORExpression

   83 BitwiseORExpression: BitwiseXORExpression

   84 BitwiseXORExpression: BitwiseANDExpression

   85 BitwiseANDExpression: EqualityExpression

   86 EqualityExpression: RelationalExpression

   87 RelationalExpression: ShiftExpression

   88 ShiftExpression: AdditiveExpression

   89 AdditiveExpression: MultiplicativeExpression

   90 MultiplicativeExpression: UnaryExpression

   91 UnaryExpression: PostfixExpression

   92 PostfixExpression: LeftHandSideExpression

   93 NewExpression: MemberExpression

   94 MemberExpression: PrimaryExpression

   95 PrimaryExpression: THIS
   96                  | IdentifierReference
   97                  | Literal

   98 AssignmentOperator: MULTIPLICATION_ASSIGNMENT
   99                   | DIVISION_ASSIGNMENT
  100                   | MODULUS_ASSIGNMENT
  101                   | ADDITION_ASSIGNMENT
  102                   | SUBTRACTION_ASSIGNMENT
  103                   | LEFT_SHIFT_ASSIGNMENT
  104                   | SIGNED_RIGHT_SHIFT_ASSIGNMENT
  105                   | UNSIGNED_RIGHT_SHIFT_ASSIGNMENT
  106                   | BITWISE_AND_ASSIGNMENT
  107                   | BITWISE_XOR_ASSIGNMENT
  108                   | BITWISE_OR_ASSIGNMENT

  109 LeftHandSideExpression: CallExpression
  110                       | NewExpression

  111 CallExpression: SuperCall
  112               | CallExpression RIGHT_BRACE Expression LEFT_BRACE
  113               | CallExpression FULL_STOP IdentifierName

  114 IdentifierReference: IDENTIFIER

  115 IdentifierName: IdentifierStart
  116               | IdentifierName IdentifierPart

  117 IdentifierStart: "$"
  118                | "_"
  119                | IDENTIFIER

  120 IdentifierPart: "$"
  121               | "_"
  122               | IDENTIFIER

  123 SuperCall: SUPER Arguments

  124 Arguments: LEFT_PAREN RIGHT_PAREN LEFT_PAREN ArgumentList RIGHT_PAREN

  125 ArgumentList: AssignmentExpression
  126             | ArgumentList COMMA AssignmentExpression

  127 YieldExpression: YIELD
  128                | YIELD AssignmentExpression

  129 ArrowFunction: ArrowParameters ARROW_FUNCTION ConciseBody

  130 ArrowParameters: CoverParenthesizedExpressionAndArrowParameterList

  131 CoverParenthesizedExpressionAndArrowParameterList: LEFT_PAREN Expression RIGHT_PAREN

  132 ConciseBody: AssignmentExpression
  133            | RIGHT_BRACKET FunctionBody LEFT_BRACKET

  134 FunctionBody: FunctionStatementList

  135 FunctionStatementList: StatementList

  136 TryStatement: TRY Block Catch
  137             | TRY Block Finally
  138             | TRY Block Catch Finally

  139 Catch: CATCH LEFT_PAREN IDENTIFIER RIGHT_PAREN Block

  140 Finally: FINALLY Block


Terminals, with rules where they appear

$end (0) 0
error (256)
END_OF_FILE (258)
BREAK (259)
CASE (260) 59
CATCH (261) 139
CLASS (262)
CONST (263) 51
CONTINUE (264)
DEBUGGER (265)
DEFAULT (266) 60
DELETE (267)
DO (268) 33
ELSE (269) 30
EXPORT (270)
EXTENDS (271)
FINALLY (272) 140
FOR (273) 35 36 37 38 39 40 41 42 43
FUNCTION (274)
IF (275) 29 30
IMPORT (276)
IN (277) 38 39 40
INSTANCEOF (278)
LET (279) 50
NEW (280)
OF (281) 41 42 43
RETURN (282)
SUPER (283) 123
SWITCH (284) 52
THIS (285) 95
THROW (286)
TRY (287) 136 137 138
TYPEOF (288)
VAR (289) 20 36 39 42
VOID (290)
WHILE (291) 33 34
WITH (292)
YIELD (293) 127 128
ENUM (294)
AWAIT (295)
IMPLEMENTS (296)
INTERFACE (297)
PACKAGE (298)
PRIVATE (299)
PROTECTED (300)
PUBLIC (301)
LITERAL_NULL (302) 68
LITERAL_TRUE (303) 69
LITERAL_FALSE (304) 70
LITERAL_UNDEFINED (305)
LITERAL_NAN (306)
UNARY_ADD (307)
UNARY_SUBTRACT (308)
LOGICAL_NOT (309)
MULTIPLY (310)
DIVIDE (311)
MODULO (312)
ADD (313)
SUBTRACT (314)
EQUAL (315)
NOT_EQUAL (316)
EXACTLY_EQUAL (317)
NOT_EXACTLY_EQUAL (318)
LEFT_SHIFT (319)
SIGNED_RIGHT_SHIFT (320)
UNSIGNED_RIGHT_SHIFT (321)
LESS_THAN (322)
GREATER_THAN (323)
LESS_THAN_OR_EQUAL (324)
GREATER_THAN_OR_EQUAL (325)
QUESTION_MARK (326)
COLON (327) 59 60
LOGICAL_AND (328)
LOGICAL_OR (329)
BITWISE_AND (330)
BITWISE_OR (331)
BITWISE_XOR (332)
BITWISE_NOT (333)
ASSIGNMENT (334) 24 25 26 78
ADDITION_ASSIGNMENT (335) 101
SUBTRACTION_ASSIGNMENT (336) 102
MULTIPLICATION_ASSIGNMENT (337) 98
DIVISION_ASSIGNMENT (338) 99
MODULUS_ASSIGNMENT (339) 100
EXPONENTIATION_ASSIGNMENT (340)
LEFT_SHIFT_ASSIGNMENT (341) 103
SIGNED_RIGHT_SHIFT_ASSIGNMENT (342) 104
UNSIGNED_RIGHT_SHIFT_ASSIGNMENT (343) 105
BITWISE_AND_ASSIGNMENT (344) 106
BITWISE_XOR_ASSIGNMENT (345) 107
BITWISE_OR_ASSIGNMENT (346) 108
ARROW_FUNCTION (347) 129
RIGHT_PAREN (348) 29 30 33 34 35 36 37 38 39 40 41 42 43 52 124 131
    139
LEFT_PAREN (349) 29 30 33 34 35 36 37 38 39 40 41 42 43 52 124 131
    139
RIGHT_BRACE (350) 18 19 53 54 112
LEFT_BRACE (351) 18 19 53 54 112
RIGHT_BRACKET (352) 133
LEFT_BRACKET (353) 133
COMMA (354) 22 126
FULL_STOP (355) 113
ELLIPSIS (356)
SEMICOLON (357) 27 28 33 35 36 37
DOUBLE_QUOTE (358)
SINGLE_QUOTE (359)
VALUE_INTEGER (360) 24 73
VALUE_FLOAT (361) 25
VALUE_STRING (362) 26 74
IDENTIFIER (363) 23 49 114 119 122 139
ORDER_ELSE (364)
"temp" (365) 9
"$" (366) 117 120
"_" (367) 118 121


Nonterminals, with rules where they appear

$accept (113)
    on left: 0
Script (114)
    on left: 1, on right: 0
ScriptBody (115)
    on left: 2, on right: 1
StatementList (116)
    on left: 3 4, on right: 2 4 5 18 135
StatementListOptional (117)
    on left: 5 6, on right: 59 60
StatementListItem (118)
    on left: 7 8, on right: 3 4
Declaration (119)
    on left: 9, on right: 8
Statement (120)
    on left: 10 11 12 13 14 15 16, on right: 7 29 30 33 34 35 36 37
    38 39 40 41 42 43
BlockStatement (121)
    on left: 17, on right: 10
Block (122)
    on left: 18 19, on right: 17 136 137 138 139 140
VariableStatement (123)
    on left: 20, on right: 11
VariableDeclarationList (124)
    on left: 21 22, on right: 20 22 36
VariableDeclaration (125)
    on left: 23, on right: 21 22
Initialiser (126)
    on left: 24 25 26, on right: 23
EmptyStatement (127)
    on left: 27, on right: 12
ExpressionStatement (128)
    on left: 28, on right: 13
IfStatement (129)
    on left: 29 30, on right: 14
BreakableStatement (130)
    on left: 31 32, on right: 15
IterationStatement (131)
    on left: 33 34 35 36 37 38 39 40 41 42 43, on right: 31
ExpressionOptional (132)
    on left: 44 45, on right: 35 36 37
LexicalDeclaration (133)
    on left: 46, on right: 37
ForDeclaration (134)
    on left: 47 48, on right: 40 43
ForBinding (135)
    on left: 49, on right: 39 42 48
LetOrConst (136)
    on left: 50 51, on right: 46 47
SwitchStatement (137)
    on left: 52, on right: 32
CaseBlock (138)
    on left: 53 54, on right: 52
CaseClauses (139)
    on left: 55 56, on right: 56 57
CaseClausesOptional (140)
    on left: 57 58, on right: 53 54
CaseClause (141)
    on left: 59, on right: 55 56
DefaultClause (142)
    on left: 60, on right: 54
Expression (143)
    on left: 61 62 63, on right: 28 29 30 33 34 38 39 40 44 52 59 112
    131
Literal (144)
    on left: 64 65 66 67, on right: 97
NullLiteral (145)
    on left: 68, on right: 64
BooleanLiteral (146)
    on left: 69 70, on right: 65
NumericLiteral (147)
    on left: 71, on right: 66
DecimalLiteral (148)
    on left: 72, on right: 71
DecimalIntegerLiteral (149)
    on left: 73, on right: 72
StringLiteral (150)
    on left: 74, on right: 67
AssignmentExpression (151)
    on left: 75 76 77 78 79, on right: 41 42 43 61 78 79 125 126 128
    132
ConditionalExpression (152)
    on left: 80, on right: 75
LogicalORExpression (153)
    on left: 81, on right: 80
LogicalANDExpression (154)
    on left: 82, on right: 81
BitwiseORExpression (155)
    on left: 83, on right: 82
BitwiseXORExpression (156)
    on left: 84, on right: 83
BitwiseANDExpression (157)
    on left: 85, on right: 84
EqualityExpression (158)
    on left: 86, on right: 63 85
RelationalExpression (159)
    on left: 87, on right: 86
ShiftExpression (160)
    on left: 88, on right: 87
AdditiveExpression (161)
    on left: 89, on right: 88
MultiplicativeExpression (162)
    on left: 90, on right: 89
UnaryExpression (163)
    on left: 91, on right: 90
PostfixExpression (164)
    on left: 92, on right: 91
NewExpression (165)
    on left: 93, on right: 110
MemberExpression (166)
    on left: 94, on right: 93
PrimaryExpression (167)
    on left: 95 96 97, on right: 62 94
AssignmentOperator (168)
    on left: 98 99 100 101 102 103 104 105 106 107 108, on right: 79
LeftHandSideExpression (169)
    on left: 109 110, on right: 38 41 78 79 92
CallExpression (170)
    on left: 111 112 113, on right: 109 112 113
IdentifierReference (171)
    on left: 114, on right: 96
IdentifierName (172)
    on left: 115 116, on right: 113 116
IdentifierStart (173)
    on left: 117 118 119, on right: 115
IdentifierPart (174)
    on left: 120 121 122, on right: 116
SuperCall (175)
    on left: 123, on right: 111
Arguments (176)
    on left: 124, on right: 123
ArgumentList (177)
    on left: 125 126, on right: 124 126
YieldExpression (178)
    on left: 127 128, on right: 76
ArrowFunction (179)
    on left: 129, on right: 77
ArrowParameters (180)
    on left: 130, on right: 129
CoverParenthesizedExpressionAndArrowParameterList (181)
    on left: 131, on right: 130
ConciseBody (182)
    on left: 132 133, on right: 129
FunctionBody (183)
    on left: 134, on right: 133
FunctionStatementList (184)
    on left: 135, on right: 134
TryStatement (185)
    on left: 136 137 138, on right: 16
Catch (186)
    on left: 139, on right: 136 138
Finally (187)
    on left: 140, on right: 137 138


State 0

    0 $accept: . Script $end

    DO             shift, and go to state 1
    FOR            shift, and go to state 2
    IF             shift, and go to state 3
    SUPER          shift, and go to state 4
    SWITCH         shift, and go to state 5
    THIS           shift, and go to state 6
    TRY            shift, and go to state 7
    VAR            shift, and go to state 8
    WHILE          shift, and go to state 9
    YIELD          shift, and go to state 10
    LITERAL_NULL   shift, and go to state 11
    LITERAL_TRUE   shift, and go to state 12
    LITERAL_FALSE  shift, and go to state 13
    LEFT_PAREN     shift, and go to state 14
    LEFT_BRACE     shift, and go to state 15
    SEMICOLON      shift, and go to state 16
    VALUE_INTEGER  shift, and go to state 17
    VALUE_STRING   shift, and go to state 18
    IDENTIFIER     shift, and go to state 19
    "temp"         shift, and go to state 20

    Script                                             go to state 21
    ScriptBody                                         go to state 22
    StatementList                                      go to state 23
    StatementListItem                                  go to state 24
    Declaration                                        go to state 25
    Statement                                          go to state 26
    BlockStatement                                     go to state 27
    Block                                              go to state 28
    VariableStatement                                  go to state 29
    EmptyStatement                                     go to state 30
    ExpressionStatement                                go to state 31
    IfStatement                                        go to state 32
    BreakableStatement                                 go to state 33
    IterationStatement                                 go to state 34
    SwitchStatement                                    go to state 35
    Expression                                         go to state 36
    Literal                                            go to state 37
    NullLiteral                                        go to state 38
    BooleanLiteral                                     go to state 39
    NumericLiteral                                     go to state 40
    DecimalLiteral                                     go to state 41
    DecimalIntegerLiteral                              go to state 42
    StringLiteral                                      go to state 43
    AssignmentExpression                               go to state 44
    ConditionalExpression                              go to state 45
    LogicalORExpression                                go to state 46
    LogicalANDExpression                               go to state 47
    BitwiseORExpression                                go to state 48
    BitwiseXORExpression                               go to state 49
    BitwiseANDExpression                               go to state 50
    EqualityExpression                                 go to state 51
    RelationalExpression                               go to state 52
    ShiftExpression                                    go to state 53
    AdditiveExpression                                 go to state 54
    MultiplicativeExpression                           go to state 55
    UnaryExpression                                    go to state 56
    PostfixExpression                                  go to state 57
    NewExpression                                      go to state 58
    MemberExpression                                   go to state 59
    PrimaryExpression                                  go to state 60
    LeftHandSideExpression                             go to state 61
    CallExpression                                     go to state 62
    IdentifierReference                                go to state 63
    SuperCall                                          go to state 64
    YieldExpression                                    go to state 65
    ArrowFunction                                      go to state 66
    ArrowParameters                                    go to state 67
    CoverParenthesizedExpressionAndArrowParameterList  go to state 68
    TryStatement                                       go to state 69


State 1

   33 IterationStatement: DO . Statement WHILE LEFT_PAREN Expression RIGHT_PAREN SEMICOLON

    DO             shift, and go to state 1
    FOR            shift, and go to state 2
    IF             shift, and go to state 3
    SUPER          shift, and go to state 4
    SWITCH         shift, and go to state 5
    THIS           shift, and go to state 6
    TRY            shift, and go to state 7
    VAR            shift, and go to state 8
    WHILE          shift, and go to state 9
    YIELD          shift, and go to state 10
    LITERAL_NULL   shift, and go to state 11
    LITERAL_TRUE   shift, and go to state 12
    LITERAL_FALSE  shift, and go to state 13
    LEFT_PAREN     shift, and go to state 14
    LEFT_BRACE     shift, and go to state 15
    SEMICOLON      shift, and go to state 16
    VALUE_INTEGER  shift, and go to state 17
    VALUE_STRING   shift, and go to state 18
    IDENTIFIER     shift, and go to state 19

    Statement                                          go to state 70
    BlockStatement                                     go to state 27
    Block                                              go to state 28
    VariableStatement                                  go to state 29
    EmptyStatement                                     go to state 30
    ExpressionStatement                                go to state 31
    IfStatement                                        go to state 32
    BreakableStatement                                 go to state 33
    IterationStatement                                 go to state 34
    SwitchStatement                                    go to state 35
    Expression                                         go to state 36
    Literal                                            go to state 37
    NullLiteral                                        go to state 38
    BooleanLiteral                                     go to state 39
    NumericLiteral                                     go to state 40
    DecimalLiteral                                     go to state 41
    DecimalIntegerLiteral                              go to state 42
    StringLiteral                                      go to state 43
    AssignmentExpression                               go to state 44
    ConditionalExpression                              go to state 45
    LogicalORExpression                                go to state 46
    LogicalANDExpression                               go to state 47
    BitwiseORExpression                                go to state 48
    BitwiseXORExpression                               go to state 49
    BitwiseANDExpression                               go to state 50
    EqualityExpression                                 go to state 51
    RelationalExpression                               go to state 52
    ShiftExpression                                    go to state 53
    AdditiveExpression                                 go to state 54
    MultiplicativeExpression                           go to state 55
    UnaryExpression                                    go to state 56
    PostfixExpression                                  go to state 57
    NewExpression                                      go to state 58
    MemberExpression                                   go to state 59
    PrimaryExpression                                  go to state 60
    LeftHandSideExpression                             go to state 61
    CallExpression                                     go to state 62
    IdentifierReference                                go to state 63
    SuperCall                                          go to state 64
    YieldExpression                                    go to state 65
    ArrowFunction                                      go to state 66
    ArrowParameters                                    go to state 67
    CoverParenthesizedExpressionAndArrowParameterList  go to state 68
    TryStatement                                       go to state 69


State 2

   35 IterationStatement: FOR . LEFT_PAREN ExpressionOptional SEMICOLON ExpressionOptional SEMICOLON ExpressionOptional RIGHT_PAREN Statement
   36                   | FOR . LEFT_PAREN VAR VariableDeclarationList SEMICOLON ExpressionOptional SEMICOLON ExpressionOptional RIGHT_PAREN Statement
   37                   | FOR . LEFT_PAREN LexicalDeclaration ExpressionOptional SEMICOLON ExpressionOptional RIGHT_PAREN Statement
   38                   | FOR . LEFT_PAREN LeftHandSideExpression IN Expression RIGHT_PAREN Statement
   39                   | FOR . LEFT_PAREN VAR ForBinding IN Expression RIGHT_PAREN Statement
   40                   | FOR . LEFT_PAREN ForDeclaration IN Expression RIGHT_PAREN Statement
   41                   | FOR . LEFT_PAREN LeftHandSideExpression OF AssignmentExpression RIGHT_PAREN Statement
   42                   | FOR . LEFT_PAREN VAR ForBinding OF AssignmentExpression RIGHT_PAREN Statement
   43                   | FOR . LEFT_PAREN ForDeclaration OF AssignmentExpression RIGHT_PAREN Statement

    LEFT_PAREN  shift, and go to state 71


State 3

   29 IfStatement: IF . LEFT_PAREN Expression RIGHT_PAREN Statement
   30            | IF . LEFT_PAREN Expression RIGHT_PAREN Statement ELSE Statement

    LEFT_PAREN  shift, and go to state 72


State 4

  123 SuperCall: SUPER . Arguments

    LEFT_PAREN  shift, and go to state 73

    Arguments  go to state 74


State 5

   52 SwitchStatement: SWITCH . LEFT_PAREN Expression RIGHT_PAREN CaseBlock

    LEFT_PAREN  shift, and go to state 75


State 6

   95 PrimaryExpression: THIS .

    $default  reduce using rule 95 (PrimaryExpression)


State 7

  136 TryStatement: TRY . Block Catch
  137             | TRY . Block Finally
  138             | TRY . Block Catch Finally

    LEFT_BRACE  shift, and go to state 15

    Block  go to state 76


State 8

   20 VariableStatement: VAR . VariableDeclarationList

    IDENTIFIER  shift, and go to state 77

    VariableDeclarationList  go to state 78
    VariableDeclaration      go to state 79


State 9

   34 IterationStatement: WHILE . LEFT_PAREN Expression RIGHT_PAREN Statement

    LEFT_PAREN  shift, and go to state 80


State 10

  127 YieldExpression: YIELD .
  128                | YIELD . AssignmentExpression

    SUPER          shift, and go to state 4
    THIS           shift, and go to state 6
    YIELD          shift, and go to state 10
    LITERAL_NULL   shift, and go to state 11
    LITERAL_TRUE   shift, and go to state 12
    LITERAL_FALSE  shift, and go to state 13
    LEFT_PAREN     shift, and go to state 14
    VALUE_INTEGER  shift, and go to state 17
    VALUE_STRING   shift, and go to state 18
    IDENTIFIER     shift, and go to state 19

    $default  reduce using rule 127 (YieldExpression)

    Literal                                            go to state 37
    NullLiteral                                        go to state 38
    BooleanLiteral                                     go to state 39
    NumericLiteral                                     go to state 40
    DecimalLiteral                                     go to state 41
    DecimalIntegerLiteral                              go to state 42
    StringLiteral                                      go to state 43
    AssignmentExpression                               go to state 81
    ConditionalExpression                              go to state 45
    LogicalORExpression                                go to state 46
    LogicalANDExpression                               go to state 47
    BitwiseORExpression                                go to state 48
    BitwiseXORExpression                               go to state 49
    BitwiseANDExpression                               go to state 50
    EqualityExpression                                 go to state 82
    RelationalExpression                               go to state 52
    ShiftExpression                                    go to state 53
    AdditiveExpression                                 go to state 54
    MultiplicativeExpression                           go to state 55
    UnaryExpression                                    go to state 56
    PostfixExpression                                  go to state 57
    NewExpression                                      go to state 58
    MemberExpression                                   go to state 59
    PrimaryExpression                                  go to state 83
    LeftHandSideExpression                             go to state 61
    CallExpression                                     go to state 62
    IdentifierReference                                go to state 63
    SuperCall                                          go to state 64
    YieldExpression                                    go to state 65
    ArrowFunction                                      go to state 66
    ArrowParameters                                    go to state 67
    CoverParenthesizedExpressionAndArrowParameterList  go to state 68


State 11

   68 NullLiteral: LITERAL_NULL .

    $default  reduce using rule 68 (NullLiteral)


State 12

   69 BooleanLiteral: LITERAL_TRUE .

    $default  reduce using rule 69 (BooleanLiteral)


State 13

   70 BooleanLiteral: LITERAL_FALSE .

    $default  reduce using rule 70 (BooleanLiteral)


State 14

  131 CoverParenthesizedExpressionAndArrowParameterList: LEFT_PAREN . Expression RIGHT_PAREN

    SUPER          shift, and go to state 4
    THIS           shift, and go to state 6
    YIELD          shift, and go to state 10
    LITERAL_NULL   shift, and go to state 11
    LITERAL_TRUE   shift, and go to state 12
    LITERAL_FALSE  shift, and go to state 13
    LEFT_PAREN     shift, and go to state 14
    VALUE_INTEGER  shift, and go to state 17
    VALUE_STRING   shift, and go to state 18
    IDENTIFIER     shift, and go to state 19

    Expression                                         go to state 84
    Literal                                            go to state 37
    NullLiteral                                        go to state 38
    BooleanLiteral                                     go to state 39
    NumericLiteral                                     go to state 40
    DecimalLiteral                                     go to state 41
    DecimalIntegerLiteral                              go to state 42
    StringLiteral                                      go to state 43
    AssignmentExpression                               go to state 44
    ConditionalExpression                              go to state 45
    LogicalORExpression                                go to state 46
    LogicalANDExpression                               go to state 47
    BitwiseORExpression                                go to state 48
    BitwiseXORExpression                               go to state 49
    BitwiseANDExpression                               go to state 50
    EqualityExpression                                 go to state 51
    RelationalExpression                               go to state 52
    ShiftExpression                                    go to state 53
    AdditiveExpression                                 go to state 54
    MultiplicativeExpression                           go to state 55
    UnaryExpression                                    go to state 56
    PostfixExpression                                  go to state 57
    NewExpression                                      go to state 58
    MemberExpression                                   go to state 59
    PrimaryExpression                                  go to state 60
    LeftHandSideExpression                             go to state 61
    CallExpression                                     go to state 62
    IdentifierReference                                go to state 63
    SuperCall                                          go to state 64
    YieldExpression                                    go to state 65
    ArrowFunction                                      go to state 66
    ArrowParameters                                    go to state 67
    CoverParenthesizedExpressionAndArrowParameterList  go to state 68


State 15

   18 Block: LEFT_BRACE . StatementList RIGHT_BRACE
   19      | LEFT_BRACE . RIGHT_BRACE

    DO             shift, and go to state 1
    FOR            shift, and go to state 2
    IF             shift, and go to state 3
    SUPER          shift, and go to state 4
    SWITCH         shift, and go to state 5
    THIS           shift, and go to state 6
    TRY            shift, and go to state 7
    VAR            shift, and go to state 8
    WHILE          shift, and go to state 9
    YIELD          shift, and go to state 10
    LITERAL_NULL   shift, and go to state 11
    LITERAL_TRUE   shift, and go to state 12
    LITERAL_FALSE  shift, and go to state 13
    LEFT_PAREN     shift, and go to state 14
    RIGHT_BRACE    shift, and go to state 85
    LEFT_BRACE     shift, and go to state 15
    SEMICOLON      shift, and go to state 16
    VALUE_INTEGER  shift, and go to state 17
    VALUE_STRING   shift, and go to state 18
    IDENTIFIER     shift, and go to state 19
    "temp"         shift, and go to state 20

    StatementList                                      go to state 86
    StatementListItem                                  go to state 24
    Declaration                                        go to state 25
    Statement                                          go to state 26
    BlockStatement                                     go to state 27
    Block                                              go to state 28
    VariableStatement                                  go to state 29
    EmptyStatement                                     go to state 30
    ExpressionStatement                                go to state 31
    IfStatement                                        go to state 32
    BreakableStatement                                 go to state 33
    IterationStatement                                 go to state 34
    SwitchStatement                                    go to state 35
    Expression                                         go to state 36
    Literal                                            go to state 37
    NullLiteral                                        go to state 38
    BooleanLiteral                                     go to state 39
    NumericLiteral                                     go to state 40
    DecimalLiteral                                     go to state 41
    DecimalIntegerLiteral                              go to state 42
    StringLiteral                                      go to state 43
    AssignmentExpression                               go to state 44
    ConditionalExpression                              go to state 45
    LogicalORExpression                                go to state 46
    LogicalANDExpression                               go to state 47
    BitwiseORExpression                                go to state 48
    BitwiseXORExpression                               go to state 49
    BitwiseANDExpression                               go to state 50
    EqualityExpression                                 go to state 51
    RelationalExpression                               go to state 52
    ShiftExpression                                    go to state 53
    AdditiveExpression                                 go to state 54
    MultiplicativeExpression                           go to state 55
    UnaryExpression                                    go to state 56
    PostfixExpression                                  go to state 57
    NewExpression                                      go to state 58
    MemberExpression                                   go to state 59
    PrimaryExpression                                  go to state 60
    LeftHandSideExpression                             go to state 61
    CallExpression                                     go to state 62
    IdentifierReference                                go to state 63
    SuperCall                                          go to state 64
    YieldExpression                                    go to state 65
    ArrowFunction                                      go to state 66
    ArrowParameters                                    go to state 67
    CoverParenthesizedExpressionAndArrowParameterList  go to state 68
    TryStatement                                       go to state 69


State 16

   27 EmptyStatement: SEMICOLON .

    $default  reduce using rule 27 (EmptyStatement)


State 17

   73 DecimalIntegerLiteral: VALUE_INTEGER .

    $default  reduce using rule 73 (DecimalIntegerLiteral)


State 18

   74 StringLiteral: VALUE_STRING .

    $default  reduce using rule 74 (StringLiteral)


State 19

  114 IdentifierReference: IDENTIFIER .

    $default  reduce using rule 114 (IdentifierReference)


State 20

    9 Declaration: "temp" .

    $default  reduce using rule 9 (Declaration)


State 21

    0 $accept: Script . $end

    $end  shift, and go to state 87


State 22

    1 Script: ScriptBody .

    $default  reduce using rule 1 (Script)


State 23

    2 ScriptBody: StatementList .
    4 StatementList: StatementList . StatementListItem

    DO             shift, and go to state 1
    FOR            shift, and go to state 2
    IF             shift, and go to state 3
    SUPER          shift, and go to state 4
    SWITCH         shift, and go to state 5
    THIS           shift, and go to state 6
    TRY            shift, and go to state 7
    VAR            shift, and go to state 8
    WHILE          shift, and go to state 9
    YIELD          shift, and go to state 10
    LITERAL_NULL   shift, and go to state 11
    LITERAL_TRUE   shift, and go to state 12
    LITERAL_FALSE  shift, and go to state 13
    LEFT_PAREN     shift, and go to state 14
    LEFT_BRACE     shift, and go to state 15
    SEMICOLON      shift, and go to state 16
    VALUE_INTEGER  shift, and go to state 17
    VALUE_STRING   shift, and go to state 18
    IDENTIFIER     shift, and go to state 19
    "temp"         shift, and go to state 20

    $default  reduce using rule 2 (ScriptBody)
